Fixing contrast Issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -27,7 +27,7 @@
         font-weight: 600;
       }
       &__button {
-        background-color: #e91e63;
+        background-color: #99003f;
         text-transform: capitalize;
         color: #ffffff;
         cursor: pointer;
@@ -109,7 +109,7 @@
           padding: 0 0.5em;
           text-transform: capitalize;
           color: #ffffff;
-          background-color: #e91e63;
+          background-color: #99003f;
           border-color: #e8175e;
           font-size: 12px;
           line-height: 1.5;
